--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -229,6 +229,25 @@ dl.faq + .top {
 	display: block;
 }
 
+.quick-links {
+	border-bottom: 1px dashed $color-04;
+	border-top: 1px dashed $color-04;
+	padding: 20px 0;
+	&.bottom-only {
+		padding-top: 0;
+		border-top: 0;
+	}
+}
+
+.page-content-section {
+	border-bottom: 1px dashed $color-04;
+	margin: 0 0 20px 0;
+	&:last-child {
+		border-bottom: 0;
+		margin: 0;
+	}
+}
+
 .key {
 	list-style: none;
 	margin-left: 0;
