Update list margin rule and remove notice-wrapper rule

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -44,7 +44,7 @@
 /* View Topic - Body - Post Notices
 ========================================================================== */
 
-.postbody, .notice-wrapper {
+.postbody {
 	.post-notice, .rules {
 		padding: 10px;
 		border-radius: 3px;
