Update setting pages and fix sub-title css display

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -357,7 +357,7 @@ dl.faq + .top {
 			font-size: rem(16px);
 		}
 	}
-	& ~ dl.details {
+	& ~ .page-content-section dl.details {
 		dt, dd {
 			&.sub-title {
 				display: none;
