--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1483,7 +1483,7 @@
 				display: none;
 			}
 		}
-		& ~ dl.details {
+		& ~ .page-content-section dl.details {
 			dt, dd {
 				&.sub-title {
 					display: block;
