Work on header design

--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_02.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_02.html
@@ -1,43 +1,32 @@
-<!-- DEFINE $DISPLAY_LOGIN_LOGOUT -->
-	<li>
-		<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem"><span>{L_LOGIN_LOGOUT}</span></a>
-	</li>
-<!-- ENDDEFINE -->
-
 <ul class="user-menu" role="menu">
-	<li class="dropdown-container">
-		<a class="dropdown-trigger" title="#" role="menuitem">
-			<div class="user-avatar">
-				<div class="image-wrap">
-					<!-- IF CURRENT_USER_AVATAR -->
-						{CURRENT_USER_AVATAR}
-					<!-- ELSE -->
-						<img src="{T_THEME_PATH}/images/no_avatar.gif" alt="Default Avatar" />
-					<!-- ENDIF -->
+	<!-- IF S_REGISTERED_USER -->
+		<li class="dropdown-container dropdown-user-info">
+			<a class="dropdown-trigger" title="Show User Links" role="menuitem">
+				<div class="user-avatar">
+					<div class="image-wrap">{CURRENT_USER_AVATAR}</div>
 				</div>
-			</div>
-			<span class="user-name">
-				<!-- IF S_REGISTERED_USER -->{CURRENT_USERNAME_SIMPLE}<!-- ELSE -->{L_GUEST}<!-- ENDIF -->
-			</span>
-		</a>
-		<div class="dropdown">
-			<ul class="dropdown-contents" role="menu">
-				<!-- IF S_REGISTERED_USER -->
+				<span class="user-name">{CURRENT_USERNAME_SIMPLE}</span>
+			</a>
+			<div class="dropdown">
+				<ul class="dropdown-contents" role="menu">
 					<!-- EVENT navbar_header_profile_list_before -->
 					<li>
-						<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem"><span>{L_PROFILE}</span></a>
+						<a href="{U_USER_PROFILE}" title="{L_READ_PROFILE}" role="menuitem"><span>{L_READ_PROFILE}</span></a>
 					</li>
 					<li>
 						<a href="{U_SEARCH_SELF}" title="{L_SEARCH_SELF}" role="menuitem"><span>{L_SEARCH_SELF}</span></a>
 					</li>
+					<li>
+						<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem"><span>User CP</span></a>
+					</li>
 					<!-- IF U_ACP -->
 						<li>
-							<a href="{U_ACP}" title="{L_ACP}" role="menuitem"><span>{L_ACP_SHORT}</span></a>
+							<a href="{U_ACP}" title="{L_ACP}" role="menuitem"><span>Admin CP</span></a>
 						</li>
 					<!-- ENDIF -->
 					<!-- IF U_MCP -->
 						<li>
-							<a href="{U_MCP}" title="{L_MCP}" role="menuitem"><span>{L_MCP_SHORT}</span></a>
+							<a href="{U_MCP}" title="{L_MCP}" role="menuitem"><span>Moderator CP</span></a>
 						</li>
 					<!-- ENDIF -->
 					<!-- IF U_RESTORE_PERMISSIONS -->
@@ -45,28 +34,13 @@
 							<a href="{U_RESTORE_PERMISSIONS}" title="{L_RESTORE_PERMISSIONS}" role="menuitem"><span>{L_RESTORE_PERMISSIONS}</span></a>
 						</li>
 					<!-- ENDIF -->
-					{$DISPLAY_LOGIN_LOGOUT}
+					<li>
+						<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem"><span>{L_LOGIN_LOGOUT}</span></a>
+					</li>
 					<!-- EVENT navbar_header_profile_list_after -->
-				<!-- ELSE -->
-					{$DISPLAY_LOGIN_LOGOUT}
-					<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
-						<li>
-							<a href="{U_REGISTER}" title="{L_REGISTER}" role="menuitem"><span>{L_REGISTER}</span></a>
-						</li>
-					<!-- ENDIF -->
-				<!-- ENDIF -->
-			</ul>
-		</div>
-	</li>
-	<!-- IF S_REGISTERED_USER -->
-		<!-- IF S_DISPLAY_PM -->
-			<li>
-				<a href="{U_PRIVATEMSGS}" title="{L_PRIVATE_MESSAGES}">
-					<span>{L_PRIVATE_MESSAGES}</span>
-					<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
-				</a>
-			</li>
-		<!-- ENDIF -->
+				</ul>
+			</div>
+		</li>
 		<!-- IF S_NOTIFICATIONS_DISPLAY -->
 			<li class="dropdown-container notification-container">
 				<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="dropdown-trigger dropdown-toggle">
@@ -76,5 +50,24 @@
 				<!-- INCLUDE notification_dropdown.html -->
 			</li>
 		<!-- ENDIF -->
-	<!-- ENDIF  -->
+		<!-- IF S_DISPLAY_PM -->
+			<li>
+				<a href="{U_PRIVATEMSGS}" title="{L_PRIVATE_MESSAGES}">
+					<span>{L_PRIVATE_MESSAGES}</span>
+					<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
+				</a>
+			</li>
+		<!-- ENDIF -->
+	<!-- ELSE -->
+		<li class="guest-info">
+			<div class="user-avatar">
+				<div class="image-wrap">
+					<img src="{T_THEME_PATH}/images/no_avatar.gif" alt="Default Avatar" />
+				</div>
+			</div>
+			<span class="user-name">
+				{L_GUEST}, why don't you <a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}">{L_LOGIN_LOGOUT}</a><!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) --> or <a href="{U_REGISTER}" title="{L_REGISTER}">{L_REGISTER}</a><!-- ENDIF -->?
+			</span>
+		</li>
+	<!-- ENDIF -->
 </ul>
