--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -109,9 +109,6 @@
 				color: $color-06;
 			}
 		}
-		.site-logo-text, & > ul, & > ul > li {
-			@include inline-block(middle);
-		}
 		.site-logo-text {
 			font-family: $font-03;
 			font-size: rem(30px);
@@ -119,84 +116,111 @@
 			@include sizing(0, 0);
 			overflow: hidden;
 			@include toggle-content(hide, $transition: true);
-			padding: 0;
 		}
 		.user-menu {
 			margin: 0 0 0 auto;
 		}
 		& > ul {
-			margin: 0;
+			margin: 0 -10px;
 			& > li {
-				& > a {
-					padding: 0 20px;
-					display: block;
+				padding: 0 10px;
+				&, .user-name, .user-avatar {
+					@include inline-block(middle);
+				}
+				.icon.fa-thumbs-o-up {
+					font-size: 0;
+					& + span {
+						margin: 0;
+					}
 				}
 				& > .icon {
-					display: block;
 					@include sizing(20px, 20px);
-					line-height: 20px;
-					@include position($type: absolute, $top: -1.5px, $right: 5px, $z: 10);
-					// Setting the variable here to use multiple transitions
-					$transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
-					@include transition($transform);
-					transform: rotate(0deg);
-				}
-				& > .icon:hover {
-					color: $color-06;
-				}
-				&.dropdown-container > a {
-					padding-right: 40px;
-				}
-				&.dropdown-visible > .icon {
-					transform: rotate(180deg);
+					margin: 0 0 0 10px;
+					&.fa-chevron-down {
+						// Setting the variable here to use multiple transitions
+						$transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
+						@include transition($transform);
+						transform: rotate(0deg);
+					}
+					&:hover {
+						color: $color-06;
+					}
 				}
 				.dropdown {
-					top: 32px;
-					background: $color-04;
-					border: 1px solid $color-03;
+					top: auto;
+					margin: 14px 0 0 0 !important;
 					border-top: 0;
-					border-radius: 0;
 					.dropdown-contents {
 						font-size: rem($global-font-size);
 					}
 				}
-				&.dropdown-left .dropdown {
-					@include position($left: 0, $right: auto);
+				&.dropdown-visible > .icon.fa-chevron-down {
+					transform: rotate(180deg);
 				}
-			}
-		}
-		.nav-menu > li {
-
-		}
-		.user-menu > li {
-			.user-name, .user-avatar {
-				@include inline-block(middle);
-			}
-			.user-avatar {
-				@include sizing(30px, 10px);
-				margin: 0 10px 0 0;
-				.image-wrap {
-					@include sizing(100%, 30px);
-					position: relative;
-					top: -11px;
-					border: 2px solid $color-04;
-					border-radius: 100%;
+				&.dropdown-user-info .dropdown {
+					margin-top: 11px !important;
+				}
+				&.guest-info a {
+					color: $color-06;
+					&:hover {
+						color: $color-01;
+					}
+				}
+				.user-avatar {
+					@include sizing(30px, 30px);
+					margin: 0 10px 0 0;
+					.image-wrap {
+						border: 2px solid $color-04;
+						border-radius: 100%;
+					}
+				}
+				#linked_accounts {
+					margin: 7px 0 0 0;
+					padding: 10px 0 0 0;
+					border-top: 1px dashed $color-04;
+					display: block;
+					font-weight: normal;
+					&:before {
+						content: 'Switch Accounts:';
+						font-weight: bold;
+					}
+					&:before, ul li a {
+						display: block;
+						padding: 0 0 3px 0;
+					}
+					ul {
+						&, & li {
+							margin: 0;
+							padding: 0;
+						}
+						li {
+							a {
+								.avatar, .username-coloured {
+									@include inline-block(middle);
+								}
+								.avatar {
+									max-height: 20px;
+									max-width: 20px;
+									border: 1px solid $color-04;
+									border-radius: 100%;
+								}
+							}
+							&:last-child a {
+								padding: 0;
+							}
+						}
+					}
 				}
 			}
 		}
 	}
 	&.sticky {
 		background: rgba($color-05, 1.0);
-		.wrapper {
-			.site-logo-text {
-				padding: 0 10px 0 20px;
-				@include toggle-content(show);
-				overflow: visible;
-				@include sizing(auto, auto);
-			}
-			& > ul > li .dropdown {
-				top: 35px;
-			}
+		.wrapper .site-logo-text {
+			margin: 0 20px 0 0;
+			@include toggle-content(show);
+			overflow: visible;
+			@include sizing(auto, auto);
 		}
 	}
 }
@@ -204,9 +228,9 @@
 /* Header - Nav top - Search Box
 ========================================================================== */
 
-#page-header .navbar > ul > li.dropdown-container .search-box {
+#page-header .navbar .wrapper > ul > li.dropdown-container .search-box {
 	min-width: 400px;
-	@include position($left: auto, $right: 0);
+	@include position($left: -150%);
 }
 
 /* Page welcome
@@ -565,7 +589,6 @@
 				.dropdown-contents {
 					max-height: none;
 					overflow: visible;
-					padding: 0;
 				}
 				&#search-box {
 					padding: 20px 20px 20px 10px;
