Work on mobile menu design

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1162,6 +1162,9 @@
 			}
 		}
 	}
+	.user-menu .dropdown-container .dropdown-contents .linked-account-title {
+		margin: 0;
+	}
 	#page-welcome {
 		.user-buttons {
 			position: relative;
