--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -500,112 +500,82 @@ a:hover .badge {
 		left: 0;
 		box-shadow: 7px 0 5px -2px rgba($color-02, 0.35);
 	}
-	.mobile-menu-header .fa-times, ul .dropdown-container > .icon {
-		text-align: center;
-		cursor: pointer;
-	}
 	.mobile-menu-header {
 		position: relative;
 		border-bottom: 1px solid mix($color-02, $color-04, 25%);
-		padding: 0 10px;
-		.mobile-header, .fa-times {
-			line-height: 50px;
-		}
+		padding: 10px 10px 10px 10px;
 		.mobile-header {
 			font-size: rem(24px);
 			@include spectral-common;
 		}
-		.fa-times {
-			@include sizing(50px, 50px);
-			@include position($type: absolute, $top: 0, $right: 0);
-			font-size: rem(25px);
-			margin: 0;
-		}
+	}
+	.mobile-menu-header .fa-times, ul .dropdown-container > .fa-chevron-right  {
+		@include sizing(44px, 44px);
+		line-height: 44px;
+		font-size: rem(20px);
+		@include position($type: absolute, $top: 0, $bottom: 0, $right: 0, $z: 10);
+		margin: auto;
+		text-align: center;
+		cursor: pointer;
 	}
 	ul {
 		margin: 0;
+		li, #search-box {
+			padding: 10px;
+		}
 		li {
 			border-top: 1px solid mix($color-01, $color-04, 05%);
 			border-bottom: 1px solid mix($color-02, $color-04, 25%);
-			a {
+			font-size: rem(16px);
+			& > a {
 				color: $color-01;
-				display: block;
-				padding: 10px;
-				font-size: rem(16px);
-			}
-			&:last-child:after {
-				content: '';
-				display: block;
-				@include sizing(100%, 1px);
-				border-bottom: 1px solid mix($color-01, $color-04, 05%);
 			}
 		}
 	}
 	& > ul {
-		li {
-			@include position($type: relative, $left: 0);
-			@include transition(left 0.5s ease-in-out);
-		}
 		.dropdown-container {
-			& > a {
-				padding-right: 70px;
-			}
+			padding-right: 64px;
 			& > .fa-chevron-down {
 				display: none;
 			}
 			& > .fa-chevron-right {
-				@include sizing(50px, 100%);
-				max-height: 44px;
-				line-height: 44px;
-				@include position($type: absolute, $top: 0, $right: 0, $z: 10);
 				@include transition(all 0.5s ease-in-out);
-				font-size: rem(20px);
-				&:before {
-					content: unicode($icon-chevron-right);
-				}
-			}
-			.dropdown {
-				width: 100%;
-				min-width: 0;
-				margin: 1px 0 0 0 !important;
-				padding: 0;
-				border: 0;
-				background: none;
-				@include position($type: absolute, $left: -($mobile-menu-width + 300));
-				@include transition(left 0.5s ease-in-out);
-				.dropdown-contents {
-					max-height: none;
-					overflow: visible;
-				}
-				&#search-box {
-					padding: 20px 20px 20px 10px;
-				}
-			}
-			&.dropdown-open {
-				background: mix($color-02, $color-04, 25%);
-				border-top: 1px solid transparent;
-				& > a {
-					font-weight: bold;
-				}
-				& > .icon {
-					transform: rotate(-180deg);
-				}
-				.dropdown {
-					@include position($top: auto, $left: 0, $z: 2);
-					visibility: visible;
-					opacity: 1;
-				}
-			}
-			&.dropdown-close > * {
-				display: none;
 			}
 		}
-		.dropdown-close {
-			left: -($mobile-menu-width + 300);
-			height: 0;
-			overflow: hidden;
+	}
+	.dropdown-container {
+		.dropdown {
+			width: 100%;
+			min-width: 0;
+			margin: 10px 0 0 0 !important;
 			padding: 0;
 			border: 0;
+			background: none;
+			@include position($type: absolute, $left: -($mobile-menu-width + 300));
+			@include transition(left 0.5s ease-in-out);
+			.dropdown-contents {
+				max-height: none;
+				overflow: visible;
+				padding: 0;
+			}
 		}
+	}
+	.dropdown-open {
+		background: mix($color-02, $color-04, 25%);
+		border-top: 1px solid transparent;
+		& > a {
+			font-weight: bold;
+		}
+		& > .icon {
+			transform: rotate(-180deg);
+		}
+		.dropdown {
+			@include position($top: auto, $left: 0, $z: 2);
+			visibility: visible;
+			opacity: 1;
+		}
+	}
+	.dropdown-close {
+		display: none;
 	}
 }
