Worked on mobile menu

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -98,6 +98,7 @@
 					<span class="mobile-header">Menu</span>
 					<i class="icon fa fa-times" aria-hidden="true"></i>
 				</header>
+				<div class="mobile-menu-content"></div>
 			</nav>
 			<!-- INCLUDE navbar_header.html -->
 			<div class="headerbar" role="banner">
