--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -245,7 +245,6 @@
 		position: relative;
 		.header_settings {
 			@include position($type: absolute, $top: 14px, $right: 20px);
-			font-variant: normal;
 		}
 	}
 	.footer {
@@ -290,7 +289,10 @@
 			}
 			.icon-mark {
 				display: block;
-				@include position($type: absolute, $top: 10px, $right: 16px, $z: 2);
+				@include position($type: absolute, $top: 10px, $right: 20px, $z: 2);
+				.icon {
+					width: auto;
+				}
 			}
 		}
 	}
@@ -500,6 +502,31 @@ a:hover .badge {
 		left: 0;
 		box-shadow: 7px 0 5px -2px rgba($color-02, 0.35);
 	}
+	ul {
+		&, & li {
+			margin: 0;
+			padding: 0;
+		}
+		li {
+			border: 0;
+			font-size: rem(16px);
+		}
+	}
+	a {
+		color: $color-01;
+	}
+	.guest-info a {
+		color: $color-06;
+	}	
+	.mobile-menu-header .fa-times, .dropdown-container .fa-chevron-right  {
+		@include sizing(44px, 44px);
+		line-height: 44px;
+		font-size: rem(20px);
+		@include position($type: absolute,$right: 0, $z: 10);
+		margin: auto;
+		text-align: center;
+		cursor: pointer;
+	}
 	.mobile-menu-header {
 		position: relative;
 		border-bottom: 1px solid mix($color-02, $color-04, 25%);
@@ -508,74 +535,89 @@ a:hover .badge {
 			font-size: rem(24px);
 			@include spectral-common;
 		}
-	}
-	.mobile-menu-header .fa-times, ul .dropdown-container > .fa-chevron-right  {
-		@include sizing(44px, 44px);
-		line-height: 44px;
-		font-size: rem(20px);
-		@include position($type: absolute, $top: 0, $bottom: 0, $right: 0, $z: 10);
-		margin: auto;
-		text-align: center;
-		cursor: pointer;
-	}
-	ul {
-		margin: 0;
-		li, #search-box {
-			padding: 10px;
-		}
-		li {
-			border-top: 1px solid mix($color-01, $color-04, 05%);
-			border-bottom: 1px solid mix($color-02, $color-04, 25%);
-			font-size: rem(16px);
-			& > a {
-				color: $color-01;
-			}
+		.fa-times {
+			@include position($top: 0, $bottom: 0);
 		}
 	}
-	& > ul {
-		.dropdown-container {
-			padding-right: 64px;
-			& > .fa-chevron-down {
-				display: none;
-			}
-			& > .fa-chevron-right {
-				@include transition(all 0.5s ease-in-out);
-			}
-		}
+	ul li > a:first-child, .dropdown.search-box .dropdown-contents,
+	#notification_list .header,	#notification_list .footer,
+	.linked-account-title strong, .guest-info {
+		border-top: 1px solid mix($color-01, $color-04, 05%);
+		border-bottom: 1px solid mix($color-02, $color-04, 25%);
+		padding: 10px;
+	}
+	ul li > a:first-child, .linked-account-title strong {
+		display: block;
+	}
+	.mobile-menu-content {
+		border-bottom: 1px solid mix($color-01, $color-04, 05%);
 	}
 	.dropdown-container {
-		.dropdown {
-			width: 100%;
-			min-width: 0;
-			margin: 10px 0 0 0 !important;
-			padding: 0;
-			border: 0;
-			background: none;
-			@include position($type: absolute, $left: -($mobile-menu-width + 300));
-			@include transition(left 0.5s ease-in-out);
-			.dropdown-contents {
-				max-height: none;
-				overflow: visible;
-				padding: 0;
-			}
+		.fa-chevron-down {
+			display: none;
+		}
+		.fa-chevron-right {
+			top: 2px;
+			@include transition(all 0.5s ease-in-out);
+		}
+	}
+	.dropdown {
+		@include sizing(0, 0);
+		min-width: 0;
+		margin-left: -($mobile-menu-width) !important;
+		padding: 0;
+		border: 0;
+		background: none;
+		@include transition(margin-left 0.5s ease-in-out);
+		position: static;
+		.dropdown-contents {
+			max-height: none;
+			overflow: visible;
+		}
+		&.search-box .dropdown-contents {
+			padding: 20px 10px;
 		}
 	}
 	.dropdown-open {
-		background: mix($color-02, $color-04, 25%);
-		border-top: 1px solid transparent;
 		& > a {
 			font-weight: bold;
+			background: mix($color-02, $color-04, 15%);
 		}
-		& > .icon {
+		.fa-chevron-right {
 			transform: rotate(-180deg);
 		}
 		.dropdown {
-			@include position($top: auto, $left: 0, $z: 2);
+			@include sizing(auto, auto);
+			margin-left: 0 !important;
 			visibility: visible;
 			opacity: 1;
 		}
 	}
 	.dropdown-close {
 		display: none;
+	}
+	#notification_list {
+		.header {
+			font-size: 0;
+			.header_settings {
+				position: static;
+				font-size: rem(16px);
+			}
+		}
+		.footer {
+			text-align: left;
+		}
+		ul {
+			max-height: none;
+			overflow: visible;
+			li {
+				.notification-block .notification_text {
+					font-size: rem(14px);
+				}
+				.icon-mark {
+					right: 10px;
+				}
+			}
+		}
 	}
 }
