--- a/khyeras/styles/khyeras_v1/template/custom/header_menu_02.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_menu_02.html
@@ -25,7 +25,7 @@
 				<!-- INCLUDE notification_dropdown.html -->
 			</li>
 		<!-- ENDIF -->
-		<li class="dropdown-container dropdown-user-info">
+		<li class="dropdown-container user-info">
 			<a class="dropdown-trigger" title="Display Profile, Setting, and Logout Links" role="menuitem">
 				<span class="user-name">{CURRENT_USERNAME_SIMPLE}</span>
 				<div class="user-avatar">
